<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".CourseAddFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_ID"
        android:inputType="text"
        android:id="@+id/add_course_id"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_ShortDesc"
        android:inputType="text"
        android:id="@+id/add_course_short_desc"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_LongDesc"
        android:inputType="text"
        android:id="@+id/add_course_long_desc"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Prereq"
        android:inputType="text"
        android:id="@+id/add_course_prereqs"/>

    <Button
        android:id="@+id/btnCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="@string/add_course"
        android:layout_gravity="right" />

</LinearLayout>